fix difference in spacing compared to classic mode

--- a/css/structure/jquery.mobile.core.css
+++ b/css/structure/jquery.mobile.core.css
@@ -49,8 +49,7 @@ div.ui-mobile-viewport { overflow-x: hidden; }
 	margin-top: 0;
 }
 .ui-mobile-touch-overflow.ui-native-fixed .ui-content .ui-listview-inset {
-	margin-top: 1em;
-	margin-bottom: 0;
+	margin-top: 2em;
 }
 
 /* loading screen */
